A little refactoring. The "Name of the game" has made it more adaptive. Due to the change in the frame, the "name of the game" has shifted, everything has been fixed.

--- a/src/Component/GameArea/Elements/NameAppSmallWidth/NameAppSmallWidth.module.css
+++ b/src/Component/GameArea/Elements/NameAppSmallWidth/NameAppSmallWidth.module.css
@@ -1,5 +1,11 @@
-.nameApp {
-    font-size: 16vw;
+.nameAppMobile {
+    font-size: 10vw;
+    fill: rgba(205, 127, 50, 0.30);
+    cursor: default;
+}
+
+.nameAppPC {
+    font-size: 7vw;
     fill: rgba(205, 127, 50, 0.30);
     cursor: default;
 }
